--- a/MovingContentUnderKeyboard/Base.lproj/Main.storyboard
+++ b/MovingContentUnderKeyboard/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MovingContentUnderKeyboard" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,66 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dqU-Be-JFe">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YOK-rI-Z8q">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                        <subviews>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H9H-oJ-9aj">
+                                                <rect key="frame" x="139" y="587" width="97" height="30"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                            </textField>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H0g-p9-ImR">
+                                                <rect key="frame" x="139" y="57" width="97" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="97" id="500-UK-ywb"/>
+                                                </constraints>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="H0g-p9-ImR" firstAttribute="top" secondItem="YOK-rI-Z8q" secondAttribute="top" constant="57" id="N71-Ji-k4V"/>
+                                            <constraint firstAttribute="bottom" secondItem="H9H-oJ-9aj" secondAttribute="bottom" constant="50" id="Pn3-h1-3nU"/>
+                                            <constraint firstItem="H0g-p9-ImR" firstAttribute="leading" secondItem="H9H-oJ-9aj" secondAttribute="leading" id="qKS-wh-HP7"/>
+                                            <constraint firstItem="H0g-p9-ImR" firstAttribute="trailing" secondItem="H9H-oJ-9aj" secondAttribute="trailing" id="w0I-4R-15b"/>
+                                            <constraint firstItem="H0g-p9-ImR" firstAttribute="centerX" secondItem="YOK-rI-Z8q" secondAttribute="centerX" id="zlE-Jr-t9e"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="YOK-rI-Z8q" firstAttribute="centerY" secondItem="dqU-Be-JFe" secondAttribute="centerY" id="72Y-j6-EpU"/>
+                                    <constraint firstAttribute="bottom" secondItem="YOK-rI-Z8q" secondAttribute="bottom" id="GDY-WU-ZrH"/>
+                                    <constraint firstItem="YOK-rI-Z8q" firstAttribute="leading" secondItem="dqU-Be-JFe" secondAttribute="leading" id="PAS-5p-rsy"/>
+                                    <constraint firstItem="YOK-rI-Z8q" firstAttribute="top" secondItem="dqU-Be-JFe" secondAttribute="top" id="deb-Fl-hVK"/>
+                                    <constraint firstItem="YOK-rI-Z8q" firstAttribute="centerX" secondItem="dqU-Be-JFe" secondAttribute="centerX" id="hJ4-7I-tD7"/>
+                                    <constraint firstAttribute="trailing" secondItem="YOK-rI-Z8q" secondAttribute="trailing" id="vg3-km-Nyc"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="dqU-Be-JFe" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="2Vd-on-jjO"/>
+                            <constraint firstItem="dqU-Be-JFe" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="onn-MY-zv6"/>
+                            <constraint firstAttribute="trailing" secondItem="dqU-Be-JFe" secondAttribute="trailing" id="sdG-ge-QK5"/>
+                            <constraint firstItem="dqU-Be-JFe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tEq-Mt-4Xe"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="lowerTextField" destination="H9H-oJ-9aj" id="3fe-Rk-bhf"/>
+                        <outlet property="scrollView" destination="dqU-Be-JFe" id="A0b-k5-vKz"/>
+                        <outlet property="upperTextField" destination="H0g-p9-ImR" id="ZvC-Ih-e4a"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
